# click-keyring

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
click_keyring/: __init__.py
examples/: defaults.py  encrypted.py  group.py  simple.py  utils.py
tests/: conftest.py  test_cli.py  test_click_keyring.py  test_keyring.py
