[tool.poetry]
name = "click-keyring"
version = "0.2.1"
authors = ["Kris Seraphine <kris.seraphine@gmail.com>"]
description = "A click option decorator to store and retrieve credentials using keyring."
readme = "README.md"
homepage = "https://github.com/baryonyx5/click-keyring"
license = "MIT"

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Terminals",
    "Operating System :: OS Independent"
]

packages = [
    { include = "click_keyring" }
]

[tool.poetry.dependencies]
python = ">=3.6"
cryptography = ">=2.9"
click = ">=7.1.1"
keyring = ">=21.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
# tox 3.8.0 and later have issues with MacOS https://github.com/tox-dev/tox/issues/1485
tox = "<3.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
